# veneer

./: Cargo.toml  LICENSE  README.md
anystring/: Cargo.toml
anystring/src/: lib.rs
dash/: Cargo.toml
dash/src/: data.rs  loader.rs  main.rs  theme.rs
dash/src/components/: label.rs  meter.rs  mod.rs  panel.rs  props_provider.rs  sparkline.rs
dash/src/views/: mod.rs  pool.rs
demo/: Cargo.toml
examples/: dataset-list.rs  pool-io-sparkline.rs  pool-list.rs
nvpair/: Cargo.toml
nvpair/src/: lib.rs
src/: ioc.rs  ioctls.rs  lib.rs  main.rs  nvlist.rs  nvpair.rs  sys.rs  util.rs  zfs.rs
veneer/: Cargo.toml
veneer-ioctl/: Cargo.toml
veneer-ioctl/src/: handle.rs  lib.rs  sys.rs
veneer/src/: dataset.rs  error.rs  handle.rs  host.rs  lib.rs  nvenums.rs  nvtypes.rs  pool.rs  util.rs  vdev.rs  zfs.rs
zdash/: Cargo.toml
zdash/src/: main.rs  theme.rs
zdash/src/components/: mod.rs  panel.rs  sparkline.rs
zdash/src/views/: mod.rs  pool.rs
zote/: Cargo.toml
zote/src/: main.rs
zote/src/cmd/: mod.rs  pool.rs  version.rs
zote/src/cmd/pool/: list.rs
