[package]
name = "veneer"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"
authors = ["Rob Norris <robn@despairlabs.com>"]
repository = "https://github.com/robn/veneer"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derivative = "2.2.0"
num-traits = "0.2.16"
num-derive = "0.4.0"
desert = "2.0.1"
