[package]
name = "veneer"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"
authors = ["Rob Norris <robn@despairlabs.com>"]
repository = "https://github.com/robn/veneer"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derivative = "2.2.0"
num-traits = "0.2.16"
num-derive = "0.4.0"
desert = "2.0.1"
elsa = "1.9.0"

[dev-dependencies]
bytesize = "1.3.0"
crossterm = "0.27.0"
ratatui = "0.23.0"
tabled = "0.14.0"
