[package]
name = "dash"
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"
authors = ["Rob Norris <robn@despairlabs.com>"]
repository = "https://github.com/robn/veneer"

[dependencies]
anystring = { path = "../anystring" }
bytesize = "2.3"
catppuccin = "2.7"
#iocraft = "0.8"
iocraft = { git = "https://github.com/robn/iocraft.git", branch = "text-align-overflow" }
smol = "2.0"
veneer = { path = "../veneer" }
