[package]
name = "veneer"
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"
authors = ["Rob Norris <robn@despairlabs.com>"]
repository = "https://github.com/robn/veneer"

[dependencies]
enum_stringify = "0.6"
error_set = "0.9"
nvpair = { path = "../nvpair" }
veneer-ioctl = { path = "../veneer-ioctl" }
